Fixed gap at top of chat page

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -1218,7 +1218,7 @@ formly-field-radio, formly-field-multicheckbox {
   display: inline-block;
   font-size: 80%;
   font-weight: bold;
-  margin: 10px;
+  padding: 10px;
 }
 
 .empty-plugins {
